<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <include
        layout="@layout/action_bar"></include>


    <TextView
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="12dp"
        android:text="@string/will_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:textSize="12dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/if_already"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:visibility="gone"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:padding="10dp"
                android:text="Item"
                android:textColor="@color/dark_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:padding="10dp"
                android:text="Quantity"
                android:textColor="@color/dark_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:padding="10dp"
                android:text="Weight"
                android:textColor="@color/dark_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lin_item"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>



                <TextView
                    android:id="@+id/txt_add_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:text="@string/add_more_package" />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="210dp">

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>



    <Button
        android:id="@+id/btn_continue"
        android:text="@string/continu"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:background="@drawable/btn_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Button>


</LinearLayout>