<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">






    <TextView
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:gravity="center"
        android:text="Please Choose what you want."
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:id="@+id/rl_city"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@drawable/ic_triangle_left"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingLeft="@dimen/dimen_20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/same_city"
                    android:textSize="@dimen/dimen_16dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="fill_parent">

            <LinearLayout
                android:paddingTop="@dimen/dimen_30dp"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RelativeLayout

                    android:id="@+id/rl_station"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:background="@drawable/ic_triangle_right"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingLeft="@dimen/dimen_10dp"
                        android:layout_centerVertical="true"
                        android:text="@string/out_station"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>



            <LinearLayout
                android:paddingBottom="30dp"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rl_international"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:background="@drawable/ic_triangle_right"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingLeft="@dimen/dimen_10dp"
                        android:textSize="@dimen/dimen_15dp"
                        android:layout_centerVertical="true"
                        android:text="@string/international_delivery"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>